# pam_ignore

./: .gitignore  CMakeLists.txt  README.md
src/: pam_ignore.c
